src/guestfs.h

typedef struct guestfs_h guestfs_h;
extern GUESTFS_DLL_PUBLIC int guestfs_fill_dir (guestfs_h *g, const char *dir, int nr);
extern GUESTFS_DLL_PUBLIC int guestfs_fill_pattern (guestfs_h *g, const char *pattern, int len, const char *path);
extern GUESTFS_DLL_PUBLIC char **guestfs_find (guestfs_h *g, const char *directory);
extern GUESTFS_DLL_PUBLIC int guestfs_find0 (guestfs_h *g, const char *directory, const char *files);
extern GUESTFS_DLL_PUBLIC char *guestfs_findfs_label (guestfs_h *g, const char *label);
extern GUESTFS_DLL_PUBLIC char *guestfs_findfs_uuid (guestfs_h *g, const char *uuid);
extern GUESTFS_DLL_PUBLIC int guestfs_fsck (guestfs_h *g, const char *fstype, const char *device);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_attach_method (guestfs_h *g)
  GUESTFS_DEPRECATED_BY ("get_backend");
extern GUESTFS_DLL_PUBLIC int guestfs_get_autosync (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_backend (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_backend_setting (guestfs_h *g, const char *name);
extern GUESTFS_DLL_PUBLIC char **guestfs_get_backend_settings (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_cachedir (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC int guestfs_get_direct (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_e2attrs (guestfs_h *g, const char *file);
extern GUESTFS_DLL_PUBLIC int64_t guestfs_get_e2generation (guestfs_h *g, const char *file);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_e2label (guestfs_h *g, const char *device)
  GUESTFS_DEPRECATED_BY ("vfs_label");
extern GUESTFS_DLL_PUBLIC char *guestfs_get_e2uuid (guestfs_h *g, const char *device)
  GUESTFS_DEPRECATED_BY ("vfs_uuid");
extern GUESTFS_DLL_PUBLIC char *guestfs_get_hv (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC const char *guestfs_get_identifier (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_libvirt_requested_credential_challenge (guestfs_h *g, int index);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_libvirt_requested_credential_defresult (guestfs_h *g, int index);
extern GUESTFS_DLL_PUBLIC char *guestfs_get_libvirt_requested_credential_prompt (guestfs_h *g, int index);
extern GUESTFS_DLL_PUBLIC char **guestfs_get_libvirt_requested_credentials (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC int guestfs_get_memsize (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC int guestfs_get_network (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC const char *guestfs_get_path (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC int guestfs_get_pgroup (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC int guestfs_get_pid (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC const char *guestfs_get_program (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC const char *guestfs_get_qemu (guestfs_h *g)
  GUESTFS_DEPRECATED_BY ("get_hv");
extern GUESTFS_DLL_PUBLIC int guestfs_get_recovery_proc (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC int guestfs_get_selinux (guestfs_h *g);
extern GUESTFS_DLL_PUBLIC int guestfs_get_smp (guestfs_h *g);