haskell/Guestfs.hs


foreign import ccall unsafe "guestfs.h guestfs_fill_dir" c_fill_dir
  :: GuestfsP -> CString -> CInt -> IO CInt

fill_dir :: GuestfsH -> String -> Int -> IO ()
fill_dir h dir nr = do
  r <- withCString dir $ \dir -> withForeignPtr h (\p -> c_fill_dir p dir (fromIntegral nr))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_fill_pattern" c_fill_pattern
  :: GuestfsP -> CString -> CInt -> CString -> IO CInt

fill_pattern :: GuestfsH -> String -> Int -> String -> IO ()
fill_pattern h pattern len path = do
  r <- withCString pattern $ \pattern -> withCString path $ \path -> withForeignPtr h (\p -> c_fill_pattern p pattern (fromIntegral len) path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_find" c_find
  :: GuestfsP -> CString -> IO (Ptr CString)

find :: GuestfsH -> String -> IO [String]
find h directory = do
  r <- withCString directory $ \directory -> withForeignPtr h (\p -> c_find p directory)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_find0" c_find0
  :: GuestfsP -> CString -> CString -> IO CInt

find0 :: GuestfsH -> String -> String -> IO ()
find0 h directory files = do
  r <- withCString directory $ \directory -> withCString files $ \files -> withForeignPtr h (\p -> c_find0 p directory files)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_findfs_label" c_findfs_label
  :: GuestfsP -> CString -> IO CString

findfs_label :: GuestfsH -> String -> IO String
findfs_label h label = do
  r <- withCString label $ \label -> withForeignPtr h (\p -> c_findfs_label p label)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_findfs_uuid" c_findfs_uuid
  :: GuestfsP -> CString -> IO CString

findfs_uuid :: GuestfsH -> String -> IO String
findfs_uuid h uuid = do
  r <- withCString uuid $ \uuid -> withForeignPtr h (\p -> c_findfs_uuid p uuid)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_fsck" c_fsck
  :: GuestfsP -> CString -> CString -> IO CInt

fsck :: GuestfsH -> String -> String -> IO Int
fsck h fstype device = do
  r <- withCString fstype $ \fstype -> withCString device $ \device -> withForeignPtr h (\p -> c_fsck p fstype device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_get_attach_method" c_get_attach_method
  :: GuestfsP -> IO CString

get_attach_method :: GuestfsH -> IO String
get_attach_method h = do
  r <- withForeignPtr h (\p -> c_get_attach_method p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_autosync" c_get_autosync
  :: GuestfsP -> IO CInt

get_autosync :: GuestfsH -> IO Bool
get_autosync h = do
  r <- withForeignPtr h (\p -> c_get_autosync p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_get_backend" c_get_backend
  :: GuestfsP -> IO CString

get_backend :: GuestfsH -> IO String
get_backend h = do
  r <- withForeignPtr h (\p -> c_get_backend p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_backend_setting" c_get_backend_setting
  :: GuestfsP -> CString -> IO CString

get_backend_setting :: GuestfsH -> String -> IO String
get_backend_setting h name = do
  r <- withCString name $ \name -> withForeignPtr h (\p -> c_get_backend_setting p name)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_backend_settings" c_get_backend_settings
  :: GuestfsP -> IO (Ptr CString)

get_backend_settings :: GuestfsH -> IO [String]
get_backend_settings h = do
  r <- withForeignPtr h (\p -> c_get_backend_settings p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_get_cachedir" c_get_cachedir
  :: GuestfsP -> IO CString

get_cachedir :: GuestfsH -> IO String
get_cachedir h = do
  r <- withForeignPtr h (\p -> c_get_cachedir p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_direct" c_get_direct
  :: GuestfsP -> IO CInt

get_direct :: GuestfsH -> IO Bool
get_direct h = do
  r <- withForeignPtr h (\p -> c_get_direct p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_get_e2attrs" c_get_e2attrs
  :: GuestfsP -> CString -> IO CString

get_e2attrs :: GuestfsH -> String -> IO String
get_e2attrs h file = do
  r <- withCString file $ \file -> withForeignPtr h (\p -> c_get_e2attrs p file)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_e2generation" c_get_e2generation
  :: GuestfsP -> CString -> IO Int64

get_e2generation :: GuestfsH -> String -> IO Int64
get_e2generation h file = do
  r <- withCString file $ \file -> withForeignPtr h (\p -> c_get_e2generation p file)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_get_e2label" c_get_e2label
  :: GuestfsP -> CString -> IO CString

get_e2label :: GuestfsH -> String -> IO String
get_e2label h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_get_e2label p device)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_e2uuid" c_get_e2uuid
  :: GuestfsP -> CString -> IO CString

get_e2uuid :: GuestfsH -> String -> IO String
get_e2uuid h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_get_e2uuid p device)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_hv" c_get_hv
  :: GuestfsP -> IO CString

get_hv :: GuestfsH -> IO String
get_hv h = do
  r <- withForeignPtr h (\p -> c_get_hv p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_identifier" c_get_identifier
  :: GuestfsP -> IO CString

get_identifier :: GuestfsH -> IO String
get_identifier h = do
  r <- withForeignPtr h (\p -> c_get_identifier p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_libvirt_requested_credential_challenge" c_get_libvirt_requested_credential_challenge
  :: GuestfsP -> CInt -> IO CString

get_libvirt_requested_credential_challenge :: GuestfsH -> Int -> IO String
get_libvirt_requested_credential_challenge h index = do
  r <- withForeignPtr h (\p -> c_get_libvirt_requested_credential_challenge p (fromIntegral index))
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_libvirt_requested_credential_defresult" c_get_libvirt_requested_credential_defresult
  :: GuestfsP -> CInt -> IO CString

get_libvirt_requested_credential_defresult :: GuestfsH -> Int -> IO String
get_libvirt_requested_credential_defresult h index = do
  r <- withForeignPtr h (\p -> c_get_libvirt_requested_credential_defresult p (fromIntegral index))
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_libvirt_requested_credential_prompt" c_get_libvirt_requested_credential_prompt
  :: GuestfsP -> CInt -> IO CString

get_libvirt_requested_credential_prompt :: GuestfsH -> Int -> IO String
get_libvirt_requested_credential_prompt h index = do
  r <- withForeignPtr h (\p -> c_get_libvirt_requested_credential_prompt p (fromIntegral index))
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_libvirt_requested_credentials" c_get_libvirt_requested_credentials
  :: GuestfsP -> IO (Ptr CString)

get_libvirt_requested_credentials :: GuestfsH -> IO [String]
get_libvirt_requested_credentials h = do
  r <- withForeignPtr h (\p -> c_get_libvirt_requested_credentials p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_get_memsize" c_get_memsize
  :: GuestfsP -> IO CInt

get_memsize :: GuestfsH -> IO Int
get_memsize h = do
  r <- withForeignPtr h (\p -> c_get_memsize p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_get_network" c_get_network
  :: GuestfsP -> IO CInt

get_network :: GuestfsH -> IO Bool
get_network h = do
  r <- withForeignPtr h (\p -> c_get_network p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_get_path" c_get_path
  :: GuestfsP -> IO CString

get_path :: GuestfsH -> IO String
get_path h = do
  r <- withForeignPtr h (\p -> c_get_path p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_pgroup" c_get_pgroup
  :: GuestfsP -> IO CInt

get_pgroup :: GuestfsH -> IO Bool
get_pgroup h = do
  r <- withForeignPtr h (\p -> c_get_pgroup p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_get_pid" c_get_pid
  :: GuestfsP -> IO CInt

get_pid :: GuestfsH -> IO Int
get_pid h = do
  r <- withForeignPtr h (\p -> c_get_pid p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_get_program" c_get_program
  :: GuestfsP -> IO CString

get_program :: GuestfsH -> IO String
get_program h = do
  r <- withForeignPtr h (\p -> c_get_program p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_qemu" c_get_qemu
  :: GuestfsP -> IO CString

get_qemu :: GuestfsH -> IO String
get_qemu h = do
  r <- withForeignPtr h (\p -> c_get_qemu p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_recovery_proc" c_get_recovery_proc
  :: GuestfsP -> IO CInt

get_recovery_proc :: GuestfsH -> IO Bool
get_recovery_proc h = do
  r <- withForeignPtr h (\p -> c_get_recovery_proc p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_get_selinux" c_get_selinux
  :: GuestfsP -> IO CInt

get_selinux :: GuestfsH -> IO Bool
get_selinux h = do
  r <- withForeignPtr h (\p -> c_get_selinux p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_get_smp" c_get_smp
  :: GuestfsP -> IO CInt
